infra/k8s/services/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-svc
  namespace: sk-dev
  labels:
    app.kubernetes.io/name: payment-svc
    app.kubernetes.io/instance: payment-svc-dev
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: swasthkart
    app.kubernetes.io/managed-by: kubectl
    swasthkart.io/team: platform
    swasthkart.io/tier: backend
    swasthkart.io/language: typescript
  annotations:
    swasthkart.io/owner: "manan.pabari"
    swasthkart.io/repo: "services/payment-service"
    swasthkart.io/port: "3005"
    swasthkart.io/dependencies: "payment-db,kafka"
    swasthkart.io/health-live: "/health/live"
    swasthkart.io/health-ready: "/health/ready"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: payment-svc
      app.kubernetes.io/instance: payment-svc-dev
  template:
    metadata:
      labels:
        app.kubernetes.io/name: payment-svc
        app.kubernetes.io/instance: payment-svc-dev
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: api
        app.kubernetes.io/part-of: swasthkart
        app.kubernetes.io/managed-by: kubectl
        swasthkart.io/team: platform
        swasthkart.io/tier: backend
        swasthkart.io/language: typescript
    spec:
      serviceAccountName: payment-svc
      containers:
        - name: payment-svc
          image: ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/swasthkart/payment-service:1.0.0
          ports:
            - containerPort: 3005
          livenessProbe:
            httpGet:
              path: /health/live
              port: 3005
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3005
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: sk-dev
  labels:
    app.kubernetes.io/name: payment-svc
    app.kubernetes.io/instance: payment-svc-dev
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: swasthkart
    app.kubernetes.io/managed-by: kubectl
    swasthkart.io/team: platform
    swasthkart.io/tier: backend
    swasthkart.io/language: typescript
spec:
  selector:
    app.kubernetes.io/name: payment-svc
    app.kubernetes.io/instance: payment-svc-dev
  ports:
    - port: 3005
      targetPort: 3005
